# aegisflow

./: .env.example  .gitignore  README.md
apps/agent-runtime/: Dockerfile  pyproject.toml
apps/agent-runtime/src/aegisflow_agent_runtime/: __init__.py  agents.py  config.py  logging.py  main.py  metrics.py  prompts.py  registry.py  schemas.py  telemetry.py  tools.py
apps/agent-runtime/tests/: test_agent_runtime.py
apps/evaluation-service/: Dockerfile  pyproject.toml
apps/gateway-api/: Dockerfile  alembic.ini  pyproject.toml
apps/gateway-api/alembic/: env.py
apps/gateway-api/alembic/versions/: 20260510_0001_create_workflow_tables.py  20260510_0002_add_workflow_orchestration_tables.py  20260510_0003_add_agent_execution_records.py  20260512_0004_add_tool_invocation_records.py  20260512_0005_add_approval_records.py  20260512_0006_add_evaluation_records.py  20260512_0007_add_replay_recovery_records.py
apps/gateway-api/src/aegisflow_gateway/: __init__.py  config.py  main.py  security.py
apps/gateway-api/src/aegisflow_gateway/api/: routes.py  schemas.py
apps/gateway-api/src/aegisflow_gateway/domain/: __init__.py  workflows.py
apps/gateway-api/src/aegisflow_gateway/persistence/: __init__.py  database.py  models.py
apps/gateway-api/src/aegisflow_gateway/services/: events.py  evidence.py  outbox_recovery.py  replay.py  temporal.py  workflow_recovery.py  workflows.py
apps/gateway-api/src/aegisflow_gateway/telemetry/: correlation.py  logging.py  metrics.py  tracing.py
apps/gateway-api/tests/: test_workflows.py
apps/operator-console/: Dockerfile  README.md  index.html  package-lock.json  package.json
apps/tool-runtime/: Dockerfile  pyproject.toml
apps/workflow-engine/: Dockerfile  pyproject.toml
apps/workflow-engine/src/aegisflow_workflow_engine/: __init__.py  config.py  domain.py  logging.py  metrics.py  telemetry.py  worker.py
apps/workflow-engine/src/aegisflow_workflow_engine/activities/: __init__.py  agents.py  approvals.py  decisions.py  recovery.py  state_transitions.py  tools.py
apps/workflow-engine/src/aegisflow_workflow_engine/persistence/: __init__.py  database.py  models.py
apps/workflow-engine/src/aegisflow_workflow_engine/workflows/: human_review_decision.py  mortgage_exception_review.py
apps/workflow-engine/tests/: test_approvals.py  test_decisions.py  test_domain.py  test_recovery.py  test_tool_invocations.py
docs/: PROJECT_CONTEXT.md
docs/agents/: AGENT_DESIGN.md
docs/api/: API_CONTRACTS.md
docs/architecture/: REPOSITORY_STRUCTURE.md  SERVICE_BOUNDARIES.md  SYSTEM_ARCHITECTURE.md  SYSTEM_COMPONENTS.md
docs/domain/: DATA_MODEL.md  DOMAIN_MODEL.md
postman/: AegisFlow_Local_Runtime.postman_collection.json
prompts/: document-analysis-agent.v1.md  intake-agent.v1.md
scripts/: seed_retryable_outbox_failure.ps1
(+60 files in other folders)
