[project]
name = "aegisflow-agent-runtime"
version = "0.1.0"
description = "Governed LangGraph agent runtime for AegisFlow."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.0",
    "httpx>=0.27.0",
    "langgraph>=0.2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
