[project]
name = "aegisflow-gateway-api"
version = "0.1.0"
description = "Gateway API for the AegisFlow local runtime foundation."
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy[asyncio]>=2.0.32",
    "temporalio>=1.9.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
]

[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
